--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <span style="--t: 6.4s;">y</span>
                     </h1>
                     <div class="hat">
-                        <img src="./images/hat.png" alt="" width="130">
+                        <img src="./images/hat.png" alt="">
                     </div>
                 </div>
                 <div class="date__of__birth">
