--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>name</span>
+                        <span>Nguyễn Anh Thư</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
